--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_verification_code
 homepage: https://github.com/awaik/flutter_verification_code.git
 description: A Flutter package that help you create a verification input.
-version: 0.1.6+2
+version: 0.2.0
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
