--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,11 @@
 name: flutter_verification_code
 homepage: https://github.com/awaik/flutter_verification_code.git
 description: A Flutter package that help you create a verification input.
-version: 0.2.1
+version: 1.0.0
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: ">=2.0.0"
 
 dependencies:
   flutter:
